# pyc

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  COMPLETENESS.md  COMPLEX_PLAN.md  COMPREHENSIONS_IMPLEMENTATION.md  COMPREHENSION_RUNTIME.md  CORRECTNESS.md  DEBUGGING_PLAN.md  FEATURES.md  GENERATOR_PLAN.md  GROK.md  IMPLEMENTATION.md  LEAK_FIXES.md  OLLAMA.md  OPTIMIZATION_PLAN.md  PERFORMANCE.md  PERFORMANCE_BASELINE.md  PERFORMANCE_OPT_LEVELS.md  PLANS.md  PROFILE_NBODY.md  README.md  REMEDIATION.md  UNBOXING_AND_COMPLETENESS_PLAN.md  WORKING_MEMORY.md  a.out  a.out_b7_modules.c  ast_test.py  basic_test_compiled  build.sh  direct_test.py  hello_compiled  int  int.f90  main.cpp  simple_test.py  simple_test2.py  simple_test_compiled  test_class.py  test_comp  (+12 more)
codegen/: ir2ll.cpp  ir2ll.h  llir_gen.cpp  llir_gen.h
examples/: README.md  example.py  simple.py
frontend/: ast.cpp  ast.h  lark_bridge.py  lark_parser.cpp  lark_parser.h  lexer.cpp  lexer.h  parser.cpp  parser.h  parser.h.bak  python.lark
include/pyc/: Codegen.h  Compiler.h  IR.h  PythonParser.h  object_struct.h  runtime.h
ir/: builder.cpp  builder.h  interpreter.cpp  interpreter.h  ir.cpp  ir.h
runtime/: b7_import.cpp  builtins.cpp  gc.cpp  import_system.cpp  import_system.h  libpyc_runtime.cpp  libpyc_runtime.h  object.cpp  object.h  object_registry.cpp  object_registry.h
src/: Compiler.cpp  main.cpp
src/codegen/: Codegen.cpp
src/frontend/: PythonParser.cpp  parse_helper.py
src/ir/: IR.cpp
src/runtime/: MainWrapper.cpp  Runtime.cpp
test/: 01_arithmetic.py  01_arithmetic.txt  02_conditionals.py  02_conditionals.txt  03_loops.py  03_loops.txt  04_recursion.py  04_recursion.txt  05_lists.py  05_lists.txt  06_strings.py  07_booleans.py  debug_comp.py  list_comp_test.py  runtime_scalability_test.sh  scalability_results.txt  scalability_test.sh  test.py  test_comprehensions_simple.py  test_comprehensive.py  test_dict.py  test_input.py  test_package_import.py  test_submodule_import.py  working_test.py
test/benchmarks/: binarytrees.py  dict_ops.py  fannkuchredux.py  fasta.py  function_calls.py  knucleotide.py  list_ops.py  nbody.py  recursion.py  run_benchmarks.sh  spectralnorm.py  string_ops.py  tight_loop.py
test/import_tests/: run_import_tests.sh  simple_module.py  test_from_import.py  test_multi_from_import.py  test_multi_import.py  test_namespace_package.py  test_nested_package.py  test_relative_sibling.py  test_simple_import.py
test/import_tests/namespace_pkg/: mod_c1.py
test/import_tests/package_a/: __init__.py  mod_a1.py  mod_a2.py
test/import_tests/package_a/subpkg/: __init__.py  mod_b1.py
test/import_tests/relative_imports/: __init__.py  sibling.py
test/import_tests/relative_imports/child/: __init__.py  child_module.py  test_relative_parent.py
tests/: b7_import.py  b7_importfrom.py  b7_importstar.py  builtins.py  builtins2.py  closures.py  features.py  fib.py  fibn.py  final_correctness_test.sh  generators.py  hash.py  hello.py  mbs.py  modifiers.py  nbody.py  opt_args_defaults.py  opt_function_call.py  opt_homogeneous_list.py  opt_mixed_code.py  opt_nested_destructuring.py  opt_numeric_lists.py  opt_numeric_locals.py  opt_numeric_loop.py  opt_range_loop.py  range.py  regex.py  regex_g.py  run_correctness_tests.sh  runner.py  sprintf.py  utils.py
